dev/k8s/lumen/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: ${NAME}-srvc
  labels:
    app: ${NAME}-srvc
spec:
  ports:
    - port: 80
  selector:
    app: ${NAME}-pd
